Fix/Dat: Get Nearest Booking